tests/ui/mismatched_types/normalize-fn-sig.stderr
error[E0308]: mismatched types
  --> $DIR/normalize-fn-sig.rs:14:22
   |
LL |     needs_i32_ref_fn(foo::<()>);
   |     ---------------- ^^^^^^^^^ expected fn pointer, found fn item
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected fn pointer `fn(&'static _, _)`
                 found fn item `fn(_, &'static _) {foo::<()>}`
note: function defined here
  --> $DIR/normalize-fn-sig.rs:11:4
   |
LL | fn needs_i32_ref_fn(_: fn(&'static i32, i32)) {}
   |    ^^^^^^^^^^^^^^^^ ------------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
